:bug: header styling bug on small screen

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,7 +1,13 @@
 .main-container {
   width: 100%;
   justify-content: center;
-  padding-top: 50px;
+  padding-top: 25px;
+}
+
+@media (min-height: 1000px) {
+  .main-container {
+    padding-top: 50px;
+  }
 }
 
 .header.container {
@@ -18,6 +24,16 @@
   justify-content: space-between;
   flex-direction: row;
   align-items: center;
+}
+
+.header-logo {
+  width: 150px;
+}
+
+@media (min-width: 801px) and  (max-width: 1400px) {
+  .header-logo {
+    width: 100px;
+  }
 }
 
 .burger-icon {
